--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -3946,7 +3946,7 @@ fieldset[disabled] .form-control:hover {
 }
 
 .ft-hover-item .ft-1, .ft-hover-item .ft-2 {
-  background: #ccc url(https://im3.ezgif.com/tmp/ezgif-3-a755f399f0.gif);
+  background: #ccc url(/Users/ShrayPatel/Documents/GitHub/ShrayDPatel.github.io/assets/images/cuba-gif.gif);
   background-size: 100%;
   background-position: 50%;
   -webkit-transition: background-size 0.3s;
@@ -3966,7 +3966,7 @@ fieldset[disabled] .form-control:hover {
 }
 
 .ft-hover-item .ft-2 {
-  background: #ccc url(https://im3.ezgif.com/tmp/ezgif-3-af2dec1896.gif);
+  background: #ccc url(/Users/ShrayPatel/Documents/GitHub/ShrayDPatel.github.io/assets/images/india-gif.gif);
   background-size: 100%;
   background-position: 50%;
 }
@@ -3976,7 +3976,7 @@ fieldset[disabled] .form-control:hover {
 }
 
 .ft-hover-item .ft-3 {
-  background: #ccc url(https://im3.ezgif.com/tmp/ezgif-3-e955d83a0a.gif);
+  background: #ccc url(/Users/ShrayPatel/Documents/GitHub/ShrayDPatel.github.io/assets/images/toronto-gif.gif);
   background-size: 100%;
   background-position: 50%;
 }
@@ -3986,7 +3986,7 @@ fieldset[disabled] .form-control:hover {
 }
 
 .ft-hover-item .ft-4 {
-  background: #ccc url(https://im3.ezgif.com/tmp/ezgif-3-ed6e74aa79.gif);
+  background: #ccc url(/Users/ShrayPatel/Documents/GitHub/ShrayDPatel.github.io/assets/images/california-gif.gif);
   background-size: 100%;
   background-position: 50%;
 }
@@ -3996,7 +3996,7 @@ fieldset[disabled] .form-control:hover {
 
 }
 .ft-hover-item .ft-5 {
-  background: #ccc url(https://im3.ezgif.com/tmp/ezgif-3-f038efb1fe.gif);
+  background: #ccc url(/Users/ShrayPatel/Documents/GitHub/ShrayDPatel.github.io/assets/images/vegas-gif.gif);
   background-size: 100%;
   background-position: 50%;
 }
@@ -4006,7 +4006,7 @@ fieldset[disabled] .form-control:hover {
 }
 
 .ft-hover-item .ft-6 {
-  background: #ccc url(https://im3.ezgif.com/tmp/ezgif-3-f6c2b62c45.gif);
+  background: #ccc url(/Users/ShrayPatel/Documents/GitHub/ShrayDPatel.github.io/assets/images/colorado-gif.gif);
   background-size: 100%;
   background-position: 50%;
 }
