--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -3946,7 +3946,7 @@ fieldset[disabled] .form-control:hover {
 }
 
 .ft-hover-item .ft-1, .ft-hover-item .ft-2 {
-  background: #ccc url(/Users/ShrayPatel/Documents/GitHub/ShrayDPatel.github.io/assets/images/cuba-gif.gif);
+  background: #ccc url(http://res.cloudinary.com/do5lpdxzu/image/upload/v1497966972/cuba-gif_ob8qca.gif);
   background-size: 100%;
   background-position: 50%;
   -webkit-transition: background-size 0.3s;
@@ -3966,7 +3966,7 @@ fieldset[disabled] .form-control:hover {
 }
 
 .ft-hover-item .ft-2 {
-  background: #ccc url(/Users/ShrayPatel/Documents/GitHub/ShrayDPatel.github.io/assets/images/india-gif.gif);
+  background: #ccc url(http://res.cloudinary.com/do5lpdxzu/image/upload/v1497966968/india-gif_r2csfw.gif);
   background-size: 100%;
   background-position: 50%;
 }
@@ -3976,7 +3976,7 @@ fieldset[disabled] .form-control:hover {
 }
 
 .ft-hover-item .ft-3 {
-  background: #ccc url(/Users/ShrayPatel/Documents/GitHub/ShrayDPatel.github.io/assets/images/toronto-gif.gif);
+  background: #ccc url(http://res.cloudinary.com/do5lpdxzu/image/upload/v1497966967/toronto-gif_kxm4vg.gif);
   background-size: 100%;
   background-position: 50%;
 }
@@ -3986,7 +3986,7 @@ fieldset[disabled] .form-control:hover {
 }
 
 .ft-hover-item .ft-4 {
-  background: #ccc url(/Users/ShrayPatel/Documents/GitHub/ShrayDPatel.github.io/assets/images/california-gif.gif);
+  background: #ccc url(http://res.cloudinary.com/do5lpdxzu/image/upload/v1497966964/california-gif_wn4qh0.gif);
   background-size: 100%;
   background-position: 50%;
 }
@@ -3996,7 +3996,7 @@ fieldset[disabled] .form-control:hover {
 
 }
 .ft-hover-item .ft-5 {
-  background: #ccc url(/Users/ShrayPatel/Documents/GitHub/ShrayDPatel.github.io/assets/images/vegas-gif.gif);
+  background: #ccc url(http://res.cloudinary.com/do5lpdxzu/image/upload/v1497966957/vegas-gif_dva0jr.gif);
   background-size: 100%;
   background-position: 50%;
 }
@@ -4006,7 +4006,7 @@ fieldset[disabled] .form-control:hover {
 }
 
 .ft-hover-item .ft-6 {
-  background: #ccc url(/Users/ShrayPatel/Documents/GitHub/ShrayDPatel.github.io/assets/images/colorado-gif.gif);
+  background: #ccc url(http://res.cloudinary.com/do5lpdxzu/image/upload/v1497966956/colorado-gif_qukrmj.gif);
   background-size: 100%;
   background-position: 50%;
 }
