--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -2029,7 +2029,7 @@ fieldset[disabled] .form-control:hover {
 
 /* ---- 4.5 Header/Page Title Parallax ---- */
 .pt-plax-md-dark {
-  background: url(http://placehold.it/2440x1280);
+  background: url(http://res.cloudinary.com/do5lpdxzu/image/upload/v1497968091/Shray_Patel_1_v6j9db.png);
   background-size: cover;
   background-position: 50%;
 }
@@ -2045,7 +2045,7 @@ fieldset[disabled] .form-control:hover {
 }
 
 .pt-plax-md-light {
-  background: url(http://placehold.it/2440x1280);
+  background: url(http://res.cloudinary.com/do5lpdxzu/image/upload/v1497968091/Shray_Patel_1_v6j9db.png);
   background-size: cover;
 }
 
@@ -2060,7 +2060,7 @@ fieldset[disabled] .form-control:hover {
 }
 
 .pt-plax-lg-dark {
-  background: url(http://placehold.it/2440x1280);
+  background: url(http://res.cloudinary.com/do5lpdxzu/image/upload/v1497968091/Shray_Patel_1_v6j9db.png);
   background-size: cover;
 }
 
@@ -2075,7 +2075,7 @@ fieldset[disabled] .form-control:hover {
 }
 
 .pt-plax-lg-light {
-  background: url(http://placehold.it/2440x1280);
+  background: url(http://res.cloudinary.com/do5lpdxzu/image/upload/v1497968091/Shray_Patel_1_v6j9db.png);
   background-size: cover;
 }
 
@@ -4057,7 +4057,7 @@ fieldset[disabled] .form-control:hover {
 
 .video-bg-section {
   height: 365px;
-  background: #ccc url(http://placehold.it/2440x1578);
+  background: #ccc url(http://res.cloudinary.com/do5lpdxzu/image/upload/v1497968091/Shray_Patel_1_v6j9db.png);
   background-position: 50%;
   background-size: cover;
 }
@@ -4236,7 +4236,7 @@ fieldset[disabled] .form-control:hover {
 /* ---- 10.1 Circle Counters ---- */
 .circles-counters, .circles-counters-dark-bg {
   position: relative;
-  background: #ccc url(http://placehold.it/2440x1578);
+  background: #ccc url(http://res.cloudinary.com/do5lpdxzu/image/upload/v1497968091/Shray_Patel_1_v6j9db.png);
   background-size: cover;
   background-attachment: fixed;
 }
@@ -4410,7 +4410,7 @@ fieldset[disabled] .form-control:hover {
 -------------------------------------------------- */
 /* ---- 12.1 Testimonial - 1 Column Slider ---- */
 .testimonials-parallax, .testimonials-dark {
-  background: url(http://placehold.it/2440x1578);
+  background: url(http://res.cloudinary.com/do5lpdxzu/image/upload/v1497968091/Shray_Patel_1_v6j9db.png);
   background-size: cover;
   background-position: 50%;
   background-attachment: fixed;
@@ -4524,7 +4524,7 @@ fieldset[disabled] .form-control:hover {
 }
 
 .testimonials-bg-2 {
-  background: url(http://placehold.it/2440x1578);
+  background: url(http://res.cloudinary.com/do5lpdxzu/image/upload/v1497968091/Shray_Patel_1_v6j9db.png);
   background-size: cover;
   background-position: 50%;
   background-attachment: fixed;
@@ -4620,7 +4620,7 @@ fieldset[disabled] .form-control:hover {
 
 /* ---- 12.3 Clients List ---- */
 .clients-list-parallax, .clients-list-minimal, .clients-list-gray {
-  background: url(http://placehold.it/2440x1578);
+  background: url(http://res.cloudinary.com/do5lpdxzu/image/upload/v1497968091/Shray_Patel_1_v6j9db.png);
   background-size: cover;
   background-attachment: fixed;
 }
@@ -7307,7 +7307,7 @@ form .input-error-2:focus {
   position: relative;
   width: 100%;
   height: 100%;
-  background: #ececec url(http://placehold.it/2440x1578);
+  background: #ececec url(http://res.cloudinary.com/do5lpdxzu/image/upload/v1497968091/Shray_Patel_1_v6j9db.png);
   background-position: 50%;
   background-size: cover;
   background-attachment: fixed;
@@ -7467,7 +7467,7 @@ form .input-error-2:focus {
 .comingsoon {
   width: 100%;
   height: 100vh;
-  background: #ececec url(http://placehold.it/2440x1578);
+  background: #ececec url(http://res.cloudinary.com/do5lpdxzu/image/upload/v1497968091/Shray_Patel_1_v6j9db.png);
   background-position: 50%;
   background-size: cover;
 }
@@ -7537,7 +7537,7 @@ form .input-error-2:focus {
   display: table;
   width: 100%;
   height: 100vh;
-  background: #ececec url(http://placehold.it/2440x1578);
+  background: #ececec url(http://res.cloudinary.com/do5lpdxzu/image/upload/v1497968091/Shray_Patel_1_v6j9db.png);
   background-position: 50%;
   background-size: cover;
 }
@@ -7636,7 +7636,7 @@ form .input-error-2:focus {
 	23.0 Maintenance Page
 -------------------------------------------------- */
 .bg-maintenance {
-  background: #ccc url(http://placehold.it/2440x1578);
+  background: #ccc url(http://res.cloudinary.com/do5lpdxzu/image/upload/v1497968091/Shray_Patel_1_v6j9db.png);
   background-position: 50%;
   background-size: cover;
 }
@@ -7890,7 +7890,7 @@ form .input-error-2:focus {
   position: relative;
   width: 100%;
   height: 100vh;
-  background: url(http://placehold.it/2440x1578);
+  background: url(http://res.cloudinary.com/do5lpdxzu/image/upload/v1497968091/Shray_Patel_1_v6j9db.png);
   background-size: cover;
   background-attachment: fixed;
 }
@@ -7965,7 +7965,7 @@ form .input-error-2:focus {
 }
 
 .fs-slide-1 {
-  background: url(http://placehold.it/2440x1578);
+  background: url(http://res.cloudinary.com/do5lpdxzu/image/upload/v1497968091/Shray_Patel_1_v6j9db.png);
   background-size: cover;
 }
 
@@ -7992,7 +7992,7 @@ form .input-error-2:focus {
 }
 
 .fs-slide-2 {
-  background: url(http://placehold.it/2440x1578);
+  background: url(http://res.cloudinary.com/do5lpdxzu/image/upload/v1497968091/Shray_Patel_1_v6j9db.png);
   background-size: cover;
 }
 
@@ -8023,7 +8023,7 @@ form .input-error-2:focus {
 }
 
 .fs-slide-3 {
-  background: url(http://placehold.it/2440x1578);
+  background: url(http://res.cloudinary.com/do5lpdxzu/image/upload/v1497968091/Shray_Patel_1_v6j9db.png);
   background-size: cover;
 }
 
@@ -8090,7 +8090,7 @@ form .input-error-2:focus {
 }
 
 .fw-slider-hero .fw-slide-1, .fw-slider-hero .fw-slide-3 {
-  background: url(http://placehold.it/2440x1578);
+  background: url(http://res.cloudinary.com/do5lpdxzu/image/upload/v1497968091/Shray_Patel_1_v6j9db.png);
   background-size: cover;
   background-position: 50%;
 }
@@ -8114,7 +8114,7 @@ form .input-error-2:focus {
 }
 
 .fw-slider-hero .fw-slide-2 {
-  background: url(http://placehold.it/2440x1578);
+  background: url(http://res.cloudinary.com/do5lpdxzu/image/upload/v1497968091/Shray_Patel_1_v6j9db.png);
   background-size: cover;
   background-position: 50%;
 }
@@ -8146,7 +8146,7 @@ form .input-error-2:focus {
 }
 
 .fw-slider-hero .fw-slide-3 {
-  background: url(http://placehold.it/2440x1578);
+  background: url(http://res.cloudinary.com/do5lpdxzu/image/upload/v1497968091/Shray_Patel_1_v6j9db.png);
   background-size: cover;
   background-position: 50%;
 }
@@ -8162,7 +8162,7 @@ form .input-error-2:focus {
 
 /* ---- 20.4 Full Screen Video ---- */
 .fs-video-hero, .fw-video-hero {
-  background: url(http://placehold.it/2440x1578);
+  background: url(http://res.cloudinary.com/do5lpdxzu/image/upload/v1497968091/Shray_Patel_1_v6j9db.png);
   background-size: cover;
 }
 
@@ -8211,7 +8211,7 @@ form .input-error-2:focus {
 
 /* ---- 20.6 Text Slider ---- */
 .text-slider-hero {
-  background: url(http://placehold.it/2440x1578);
+  background: url(http://res.cloudinary.com/do5lpdxzu/image/upload/v1497968091/Shray_Patel_1_v6j9db.png);
   background-size: cover;
   background-position: 50%;
 }
@@ -8246,7 +8246,7 @@ form .input-error-2:focus {
 
 /* ---- 20.7 Freelancer ---- */
 .freelancer-hero {
-  background: url(http://placehold.it/2440x1578);
+  background: url(http://res.cloudinary.com/do5lpdxzu/image/upload/v1497968091/Shray_Patel_1_v6j9db.png);
   background-size: cover;
   background-position: 40%;
   background-attachment: fixed;
@@ -8323,7 +8323,7 @@ form .input-error-2:focus {
 }
 
 .agency2-hero {
-  background: url(http://placehold.it/2440x1578);
+  background: url(http://res.cloudinary.com/do5lpdxzu/image/upload/v1497968091/Shray_Patel_1_v6j9db.png);
   background-size: cover;
   background-position: 50%;
   background-attachment: fixed;
@@ -8393,7 +8393,7 @@ form .input-error-2:focus {
 
 /* ---- 20.9 Animated Heading ---- */
 .animated-hero {
-  background: url(http://placehold.it/2440x1578);
+  background: url(http://res.cloudinary.com/do5lpdxzu/image/upload/v1497968091/Shray_Patel_1_v6j9db.png);
   background-size: cover;
   background-position: 50%;
   background-attachment: fixed;
@@ -8503,7 +8503,7 @@ form .input-error-2:focus {
   position: relative;
   width: 100%;
   height: 100vh;
-  background: url(http://placehold.it/2440x1578);
+  background: url(http://res.cloudinary.com/do5lpdxzu/image/upload/v1497968091/Shray_Patel_1_v6j9db.png);
   background-size: cover;
   background-position: 40%;
   background-attachment: fixed;
@@ -8610,7 +8610,7 @@ form .input-error-2:focus {
 }
 
 .web-app-hero {
-  background: url(http://placehold.it/2440x1578);
+  background: url(http://res.cloudinary.com/do5lpdxzu/image/upload/v1497968091/Shray_Patel_1_v6j9db.png);
   background-size: cover;
   background-position: 50%;
   background-attachment: fixed;
